# PPTerminals

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
.claude/agents/: project-coordinator.md
.claude/agents/backend/: rust-developer.md
.claude/agents/frontend/: react-developer.md  ui-designer.md
.claude/agents/integration/: claude-integration-dev.md
.claude/rules/: cross-platform.md  ipc-protocol.md
.claude/skills/claude-cli-integration/: SKILL.md
.claude/skills/ppterminals-tauri/: SKILL.md
.claude/skills/tauri-architecture/: SKILL.md
.claude/skills/terminal-emulation/: SKILL.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_commands.rs  lib.rs  main.rs  native_term.rs  pty_manager.rs
src/addons/: claude-output-parser.ts  file-link-provider.ts
src/components/: AgentPanel.css  AgentPanel.tsx  Autocomplete.css  Autocomplete.tsx  ConfirmDialog.css  ConfirmDialog.tsx  Dashboard.css  Dashboard.tsx  Explorer.css  Explorer.tsx  FarmWindow.css  FarmWindow.tsx  FileIcon.tsx  FileViewer.css  FileViewer.tsx  MenuBar.css  MenuBar.tsx  NativeTerminal.css  NativeTerminal.tsx  PixelAvatar.css  PixelAvatar.tsx  PixelFarm.css  PixelFarm.tsx  SessionMonitor.css  SessionMonitor.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  TabSwitcher.css  TabSwitcher.tsx  TerminalView.css  TerminalView.tsx
src/hooks/: use-autocomplete.ts  use-pty.ts
src/stores/: dashboard-store.ts  explorer-store.ts  file-viewer-store.ts  tab-store.ts  theme-store.ts
