[package]
name = "pp-terminals"
version = "0.1.0"
description = "Cross-platform Terminal App with Claude CLI integration"
authors = ["paul_huang"]
edition = "2021"

[lib]
name = "pp_terminals_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
which = "7"
parking_lot = "0.12"
dirs = "6"
open = "5"

